lens-Alignment-Fix

--- a/resources/js/pages/calculator/components/lensType/styles.module.scss
+++ b/resources/js/pages/calculator/components/lensType/styles.module.scss
@@ -25,4 +25,6 @@
 }
 .radio-margin {
     margin-bottom: 10px;
+    width: 40%;
+    align-items: flex-start;
 }
